separately: Merge, Compare, Export to Text, Export to XML, Synchronize and
Find Toolbar.
[3062809] Add "Add Group" to Toolbar.
[3062788] Add "Add New Entry" menu item to additional context menus.
[] Online help is now available in Spanish, thanks to Jose.

Changes to Existing Features in 3.24
====================================
None

Bugs fixed in 3.24
==================
[3084401] When database is locked, clipboard is cleared and the hotkey works.
[3069250] PasswordSafe now remembers the selected entry on Lock After Idle.
[3065827] Uninstall fails gracefully when invoked with pwsafe running.
[3062850] Dialogs are now correctly closed if open when the workstation locks
(with preference "Lock password database on workstation lock" set), enabling
the application to be opened again.
[3062769] Groups list in Add/Edit dialog box no longer "remembers"
groups from previously opened database.
[3058043] Hexadecimal password policy now correctly saved.
[] Spanish translations for installer and application updated - thanks
to Jose.

New Features for 3.23
=====================
[3022827] Implement 'stealth' mode where, as long as the user specifies both
the use of the System Tray and a valid Hot Key, then the System Tray
icon and the button on the Taskbar can be hidden.
[3017535] Allow user to edit the generated passwords (Manage->Generate Password)
before copying to the clipboard.
[3011546] "autotype" can now be added to the List View via the Column
Picker (right click on column labels).

Changes to Existing Features in 3.23
====================================
[3026944] Confirm on Delete option has been re-instated.

Bugs fixed in 3.23
==================
[3029576] Ensure user specified backup directory ends with a slash.
[3028926] Entries modified via Synchronize are now displayed correctly if the
user checks the preference "Highlight changed entries" via Options->Display.
[3016803] No longer crashes when trying to view a base entry with
similarly named aliases.